hphp/hack/test/typecheck/type_const_in_type_alias.php.exp
File "type_const_in_type_alias.php", line 3, characters 13-16:
Type aliases to type constants are not supported (Parsing[1002])
